# PCS-25-26

./: testpush.txt
esercitazione1/: CMakeLists.txt  media_temperature.cpp
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp
esercitazione2/: CMakeLists.txt  analisi_array.cpp  array_address.cpp  bubblesort_naive.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorting.hpp  test_bubble_sort.cpp  test_insertion_sort.cpp  test_selection_sort.cpp
esercitazione5/: CMakeLists.txt  Report.txt  confronta_tempi.cpp  measure_sorts.cpp  sorting.hpp  test_merge_sort.cpp  test_quick_sort.cpp
esercitazione8/: CMakeLists.txt  main_graph.cpp  test_graph.cpp  undirected_edge.hpp  undirected_graph.hpp
esercitazione9/: CMakeLists.txt  cammini_minimi.hpp  containers.hpp  main.cpp  undirected_graph.hpp  visite_grafi.hpp
progetto_definitivo/: CMakeLists.txt  algoritmi_cicli.hpp  gradiente_coniugato.hpp  grafo.hpp  input.txt  input10_2.txt  input10_3.txt  input2.txt  input3.txt  input4.txt  main.cpp  project_functions.hpp
